# ghostAp

./: .env.example  .gitignore  .restart_worker.sh  AGENTS.md  Agent.md  CHANGELOG.md  CLAUDE.md  Memory.md  README.md  SPEC-WORKFLOW.md  main.py  output.json  plan.json  plan.md  product_review.json  pyproject.toml  restart.sh  security_ux_review_report.md  spec-q1.json  test_logger.py
.Memory/: 2026-01-09.md  2026-01-18.md  2026-01-22.md  2026-01-29.md  2026-02-01.md  2026-02-02.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-24.md  2026-02-26.md  2026-02-27.md  2026-02-28.md  2026-03-02.md  2026-03-03.md  2026-03-05.md  2026-03-06.md  2026-03-09.md  2026-03-12.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-19_acp_provider.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  (+73 more)
.githooks/: README.md  commit-msg  pre-commit
.plans/: card-cleanup-tasks.md  card-migration-tasks.md  card-pipeline-review-fixes.md  card-session-migration-tasks.md
.superpowers/sdd/: task-2-report.md  task-3-report.md
docs/: 2025-04-25-multi-chat-isolation-design.md  2026-04-29-new-chat-project-design.md  2026-04-30-card-refactor-design.md  2026-04-30-card-refactor-plan.md  2026-05-11-refactoring-analysis.md  2026-07-10-codex-effort-selection-design.md  2026-07-10-codex-effort-selection-plan.md  2026-07-10-traex-three-level-model-selection-design.md  2026-07-10-traex-three-level-model-selection-plan.md  2026-07-12-autonomous-agent-department-design.md  2026-07-12-autonomous-data-plan.md  2026-07-12-autonomous-foundation-plan.md  2026-07-13-autonomous-durable-ingress-plan.md  2026-07-13-autonomous-hire-production-plan.md  2026-07-13-autonomous-hire-safety-plan.md  2026-07-13-autonomous-thread-context-plan.md  2026-07-14-autonomous-data-cutover-plan.md  2026-07-14-autonomous-employee-response-plan.md  2026-07-14-autonomous-fire-plan.md  2026-07-14-autonomous-membership-stop-plan.md  2026-07-14-autonomous-release-trust-plan.md  2026-07-14-built-in-visible-employees-design.md  2026-07-14-built-in-visible-employees-plan.md  2026-07-17-persistent-employee-runtime-and-knowledge-workspace-plan.md  2026-07-24-acp-image-card-stream-plan.md  2026-07-24-deep-false-subtask-routing-fix-plan.md  2026-07-24-subtask-card-visual-polish-plan.md  2026-07-24-task-completion-lifecycle-plan.md  TOOL_CHAIN_REPORT.md  acp-codex-official-adapter-hardening-design.md  acp_architecture.md  acp_provider_guide.md  adr-card-pipeline-boundary.md  adr-employee-runtime-profiles.md  adr-lock-ordering.md  ai-agent-products-research-2026-05-23.md  card-migration-faq.md  commit-message-guidelines.md  goals.md  loop_mode_architecture.md  (+5 more)
docs/research/: ai_agent_products_report_2026.md  vision_ui_automation_design_2026.md
scripts/: benchmark_providers.py  check_shim_deadline.sh  daemon.py  fix-commit-message.sh  run_employee_channel_capability.py  run_stress_test.py  smoke_new_team.py  test_inventory.py  validate_employee_tenant.py
scripts/archive/: fix_feishu_ws_reconnect.py  fix_gc_deep_loop.py  fix_main_monitor.py  fix_ws_client.py  fix_ws_client_message.py  patch_deep_progress.py  patch_loop_retry.py  patch_loop_save.py  patch_loop_save2.py  patch_scheduler.py  patch_spec_gc.py  patch_ws_client.py  test_gc_deep_loop.py
slock/oc_18be8f689e9edb81e2524ded8b8921f2/: .slock_channel.json
src/: __init__.py  admin_bootstrap.py  agent_session.py  chat_lock.py  config.py  employee_session_scope.py  engine_base.py  grill_me.py  main.py  model_selection.py  repo_lock.py  server.py
src/acp/: __init__.py  claude_capabilities.py  client.py  diagnostics.py  employee_selection.py  helper.py  manager.py  model_selection.py  models.py  outcome.py  provider.py  renderer.py  session.py  session_factory.py  startup_utils.py  sync_adapter.py  telemetry.py  traex_selection.py
src/agent/: __init__.py  intent_recognizer.py  shell_agent.py
src/agent_session/: __init__.py  backend_resolver.py  claude_cli.py  employee_cli_sandbox.py  (+5 more)
tests/: conftest.py  control_plane_fixtures.py  fakes.py  helpers.py  test_acp_client.py  test_acp_idle_health_config.py  test_acp_keepalive.py  test_acp_manager_consistency.py  test_acp_manager_ttadk_precheck.py  test_acp_model_normalization.py  test_acp_model_probe_timeout.py  test_acp_models.py  test_acp_protocol_contract.py  test_acp_provider.py  test_acp_provider_extensions.py  test_acp_renderer.py  test_acp_renderer_turns.py  test_acp_session_event_fence.py  test_acp_startup_utils.py  test_acp_stdio_integration.py  test_acp_sync_adapter.py  test_action_dispatch_mapping.py  test_action_dispatcher.py  test_action_retry.py  test_activate_channel_reference.py  test_activity_digest.py  test_adaptive_review_convergence.py  test_adaptive_review_pipeline.py  test_adaptive_review_roles.py  test_adaptive_review_strategy.py  test_adaptive_review_timeout.py  test_admin_bootstrap.py  test_admin_hardening.py  test_agent_session.py  test_async_helpers.py  test_atexit_shutdown.py  test_auth_whitelist.py  test_auto_plan_timer.py  test_autonomous.py  test_banner_computer.py  (+605 more)
ux/: acp-model-cascade.html  acp_model_activation_preview.html  card_preview.html  employee-authorization-evidence.html  employee-hire-profile.html  employee-response-card.html  employee-runtime-status.html  ghostap-user-guide.html  programming-image-artifacts.html  programming-reasoning-summary.html  slock-agent-card.html  slock-dissolve-confirm.html  slock-status-panel.html  slock-task-board.html  slock-team-employee-flow.html  spec-cache-status-card.html  spec-completion-control-workflow.js  spec-flow.html  spec-review-card-flow.html  spec-workflow-animated.html  spec-workflow.html  unified_card_v1.html  unified_card_v2_single.html  unified_card_v2_split_parallel.html  workflow-complete.html  workflow-confirm.html  workflow-model-cascade.html  workflow-progress.html  workflow-result-brief.html  worktree-flow.html
(+838 files in other folders)
