[project]
name = "ghostap"
version = "0.1.0"
description = "飞书机器人Shell沙箱服务 - 通过飞书机器人安全执行本地shell命令"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.5.2",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "agent-client-protocol>=0.8.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
timeout = 300
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:lark_oapi.*",
    "ignore::DeprecationWarning:websockets.*"
]
